// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DropdownAutoCompleteMenu renders with a group 1`] = `
<DropdownAutoCompleteMenu
  blendCorner={true}
  emptyMessage="No items"
  isOpen={true}
  items={
    Array [
      Object {
        "items": Array [
          Object {
            "label": <div>
              New Zealand
            </div>,
            "value": "new zealand",
          },
          Object {
            "label": <div>
              Australia
            </div>,
            "value": "australia",
          },
        ],
        "label": "countries",
        "value": "countries",
      },
    ]
  }
  maxHeight={300}
  onSelect={[Function]}
  searchPlaceholder="Filter search"
>
  <AutoComplete
    disabled={false}
    inputIsActor={false}
    isOpen={true}
    itemToString={[Function]}
    onSelect={[Function]}
    resetInputOnClose={true}
  >
    <DropdownMenu
      isOpen={true}
      keepMenuOpen={false}
      onClickOutside={[Function]}
    >
      <AutoCompleteRoot>
        <Component
          className="css-6v04yn-AutoCompleteRoot ejumqxq0"
        >
          <div
            className="css-6v04yn-AutoCompleteRoot ejumqxq0"
          >
            Click Me!
            <StyledMenu
              blendCorner={true}
              innerRef={[Function]}
              onClick={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
            >
              <div
                className="css-rlm8zr-StyledMenu-getMenuBorderRadius ejumqxq7"
                onClick={[Function]}
                onMouseDown={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
              >
                <Flex>
                  <Base
                    className="css-sncxrr"
                  >
                    <div
                      className="css-sncxrr"
                      is={null}
                    >
                      <StyledInput
                        autoFocus={true}
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        placeholder="Filter search"
                        value=""
                      >
                        <input
                          autoFocus={true}
                          className="css-p4015a-Input-inputStyles-StyledInput ejumqxq2"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          onKeyDown={[Function]}
                          placeholder="Filter search"
                          value=""
                        />
                      </StyledInput>
                      <InputLoadingWrapper>
                        <Base
                          className="css-1ren11q-InputLoadingWrapper ejumqxq1"
                        >
                          <div
                            className="css-1ren11q-InputLoadingWrapper ejumqxq1"
                            is={null}
                          />
                        </Base>
                      </InputLoadingWrapper>
                    </div>
                  </Base>
                </Flex>
                <div>
                  <StyledItemList
                    maxHeight={300}
                  >
                    <div
                      className="css-5kh8cy-StyledItemList ejumqxq8"
                    >
                      <LabelWithBorder
                        key="countries"
                      >
                        <div
                          className="css-o8s6pc-LabelWithBorder ejumqxq4"
                        >
                          <GroupLabel>
                            <div
                              className="css-1oz0skv-GroupLabel ejumqxq6"
                            >
                              countries
                            </div>
                          </GroupLabel>
                        </div>
                      </LabelWithBorder>
                      <AutoCompleteItem
                        highlightedIndex={0}
                        index={0}
                        key="new zealand-0"
                        onClick={[Function]}
                      >
                        <div
                          className="css-le5ima-AutoCompleteItem ejumqxq3"
                          onClick={[Function]}
                        >
                          <div>
                            New Zealand
                          </div>
                        </div>
                      </AutoCompleteItem>
                      <AutoCompleteItem
                        highlightedIndex={0}
                        index={1}
                        key="australia-1"
                        onClick={[Function]}
                      >
                        <div
                          className="css-14kg2cv-AutoCompleteItem ejumqxq3"
                          onClick={[Function]}
                        >
                          <div>
                            Australia
                          </div>
                        </div>
                      </AutoCompleteItem>
                    </div>
                  </StyledItemList>
                </div>
              </div>
            </StyledMenu>
          </div>
        </Component>
      </AutoCompleteRoot>
    </DropdownMenu>
  </AutoComplete>
</DropdownAutoCompleteMenu>
`;

exports[`DropdownAutoCompleteMenu renders without a group 1`] = `
<DropdownAutoCompleteMenu
  blendCorner={true}
  emptyMessage="No items"
  isOpen={true}
  items={
    Array [
      Object {
        "label": <div>
          Apple
        </div>,
        "value": "apple",
      },
      Object {
        "label": <div>
          Bacon
        </div>,
        "value": "bacon",
      },
      Object {
        "label": <div>
          Corn
        </div>,
        "value": "corn",
      },
    ]
  }
  maxHeight={300}
  onSelect={[Function]}
  searchPlaceholder="Filter search"
>
  <AutoComplete
    disabled={false}
    inputIsActor={false}
    isOpen={true}
    itemToString={[Function]}
    onSelect={[Function]}
    resetInputOnClose={true}
  >
    <DropdownMenu
      isOpen={true}
      keepMenuOpen={false}
      onClickOutside={[Function]}
    >
      <AutoCompleteRoot>
        <Component
          className="css-6v04yn-AutoCompleteRoot ejumqxq0"
        >
          <div
            className="css-6v04yn-AutoCompleteRoot ejumqxq0"
          >
            Click Me!
            <StyledMenu
              blendCorner={true}
              innerRef={[Function]}
              onClick={[Function]}
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
            >
              <div
                className="css-rlm8zr-StyledMenu-getMenuBorderRadius ejumqxq7"
                onClick={[Function]}
                onMouseDown={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
              >
                <Flex>
                  <Base
                    className="css-sncxrr"
                  >
                    <div
                      className="css-sncxrr"
                      is={null}
                    >
                      <StyledInput
                        autoFocus={true}
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        onKeyDown={[Function]}
                        placeholder="Filter search"
                        value=""
                      >
                        <input
                          autoFocus={true}
                          className="css-p4015a-Input-inputStyles-StyledInput ejumqxq2"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onFocus={[Function]}
                          onKeyDown={[Function]}
                          placeholder="Filter search"
                          value=""
                        />
                      </StyledInput>
                      <InputLoadingWrapper>
                        <Base
                          className="css-1ren11q-InputLoadingWrapper ejumqxq1"
                        >
                          <div
                            className="css-1ren11q-InputLoadingWrapper ejumqxq1"
                            is={null}
                          />
                        </Base>
                      </InputLoadingWrapper>
                    </div>
                  </Base>
                </Flex>
                <div>
                  <StyledItemList
                    maxHeight={300}
                  >
                    <div
                      className="css-5kh8cy-StyledItemList ejumqxq8"
                    >
                      <AutoCompleteItem
                        highlightedIndex={0}
                        index={0}
                        key="apple-0"
                        onClick={[Function]}
                      >
                        <div
                          className="css-le5ima-AutoCompleteItem ejumqxq3"
                          onClick={[Function]}
                        >
                          <div>
                            Apple
                          </div>
                        </div>
                      </AutoCompleteItem>
                      <AutoCompleteItem
                        highlightedIndex={0}
                        index={1}
                        key="bacon-1"
                        onClick={[Function]}
                      >
                        <div
                          className="css-14kg2cv-AutoCompleteItem ejumqxq3"
                          onClick={[Function]}
                        >
                          <div>
                            Bacon
                          </div>
                        </div>
                      </AutoCompleteItem>
                      <AutoCompleteItem
                        highlightedIndex={0}
                        index={2}
                        key="corn-2"
                        onClick={[Function]}
                      >
                        <div
                          className="css-14kg2cv-AutoCompleteItem ejumqxq3"
                          onClick={[Function]}
                        >
                          <div>
                            Corn
                          </div>
                        </div>
                      </AutoCompleteItem>
                    </div>
                  </StyledItemList>
                </div>
              </div>
            </StyledMenu>
          </div>
        </Component>
      </AutoCompleteRoot>
    </DropdownMenu>
  </AutoComplete>
</DropdownAutoCompleteMenu>
`;

exports[`DropdownAutoCompleteMenu selects 1`] = `[MockFunction]`;
